--- a/gameplay.html
+++ b/gameplay.html
@@ -74,7 +74,7 @@
         <div class="row">
             <button class="shoot-button"
                 id="shoot-button-1"
-                onclick="handleShootButtonClick()"
+                onclick="handleShootButtonClick1()"
             ></button>
         </div>
         <div class="row" id="result-1" hidden></div>
@@ -130,7 +130,7 @@
       <div class="row">
           <button class="shoot-button"
               id="shoot-button-2"
-              onclick="handleShootButtonClick()"
+              onclick="handleShootButtonClick2()"
           ></button>
       </div>
       <div class="row" id="result-2" hidden></div>
@@ -188,7 +188,7 @@
     <div class="row">
         <button class="shoot-button"
             id="shoot-button-3"
-            onclick="handleShootButtonClick()"
+            onclick="handleShootButtonClick3()"
         ></button>
     </div>
     <div class="row" id="result-3" hidden></div>
